# shogiwars_crawler

./: .gitignore  Dockerfile  LICENSE  pyproject.toml
