[tool.poetry]
name = "shogiwars"
version = "0.1.0"
description = ""
authors = ["honeda <50893852+honeda@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.6.2"
seaborn = "^0.12.1"
jupyterlab = "^3.5.0"
joblib = "^1.2.0"
selenium = "^4.6.0"
chromedriver-binary = "107.0.5304.62.0"

[tool.poetry.dev-dependencies]
jupyterlab-vim = "^0.15.1"
flake8 = "5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
